# philosophers

./: .gitignore  CMakeLists.txt
philo/: Makefile  incorrect_args.sh  philo  variables.mk
philo/inc/: libft.h  philo.h  philo_structs.h
philo/libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atoll.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_math.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcmpi.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_memsetn.c  ft_nputnbr_fd.c  ft_numlen.c  ft_numlen_base.c  ft_numlenu.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putnbru_fd.c  (+28 more)
philo/src/: main.c  messages.c  parse_args.c  philo_messages.c  philo_routines.c  philo_threads.c  philo_time.c  philo_utils.c  routines.c  slog.c  time_utils.c  utils.c
philo/tests/: test_parse_args.cpp
philo_bonus/: Makefile  variables.mk
philo_bonus/inc/: philo.h  philo_structs.h
philo_bonus/src/: main.c  philo_lib_utils.c  philo_lib_utils2.c  philo_messages.c  philo_routines.c  philo_threads.c  philo_time.c  philo_utils.c
